# qrc-editor

./: CMakeLists.txt  README.md  command_line.cpp  command_line.h  main.cpp
